--- a/home.html
+++ b/home.html
@@ -6,22 +6,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+    crossorigin="anonymous">
     <link rel="stylesheet" href="css\home.css">
     <title>Home Page</title>
 </head>
 
 <body>
-
-    <a href="home.html"><img class="img1" src="phonedash.png"></a>
-        <h1>iPhone Repair  <br>At Your Door Bell</h1>
-        <a href="home.html"><span>Home</span></a> 
-        <p></p>
-        <a href="appointment.html"><span>Appointment</span></a>
-        <div>
-           <p>Order phone service <br> at your finger tips just <br>
-        like you do your food!</p>
-        </div>
+    <div>
+        <a href="home.html"><img class="img1" src="phonedash.png"></a>
+        <h1>iPhone Repair <br>At Your Door Bell</h1>
+        <a href="home.html"><span>HOME</span></a>
+        <br>
+        <br>
+        <br>
+        <a href="appointment.html"><span>APPOINTMENT</span></a>
+    </div>
+    <div>
+        <p>Order phone service <br> at your finger tips just <br>
+            like you do your food!</p>
+            <a href="appointment.html"> </a>
+        <h3>Book an appointment today.</h3> 
+    </div>
+    <div>
+        <h2>SERVICES</h2>
+        <p id="pair">iPhone SE</p> 
+        <p id="pair">iPhone 6</p>
+        <p id="pair">iPhone 6 +</p>
+        <p id="pair">iPhone 6s</p>
+        <p id="pair">iPhone 6s +</p>
+        <p id="pair">iPhone 7</p>
+        <p id="pair">iPhone 7 +</p>
+        <p id="pair">iPhone 8 </p>
+        <p id="pair">iPhone 8 +</p>
+        <p id="pair">iPhone X</p>
+        <p id="pair">iPhone XR</p>
+        <p id="pair">iPhone XS</p>
     
+        <h5>Get a FREE Repair Estimate Today! <br>
+            For a free in-home consultation and estimate, call us at <br>
+
+        <i class="fas fa-phone"></i>CALL 1.314.445.4903</h5>
+
+        </div>
+        
+    </div>
+
+
+
 
 </body>
 
