changing background color

--- a/appointment.html
+++ b/appointment.html
@@ -8,6 +8,20 @@
     <title>Appointment Page</title>
 </head>
 <body>
-   
+        <div>
+                <a href="home.html"><img class="img1" src="phonedash.png"></a>
+                <Br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <a href="home.html"><span>HOME</span></a>
+                <br>
+                <br>
+                <br>
+                <a href="appointment.html"><span>APPOINTMENT</span></a>
+            </div>
 </body>
 </html>
