changing background color

--- a/home.html
+++ b/home.html
@@ -14,8 +14,8 @@
 
 <body>
     <div>
-        <a href="home.html"><img class="img1" src="phonedash.png"></a>
-        <Br>
+        <a href="home.html"><img class="img1" src="images/phonedash.png"></a>
+        <r>
         <br>
         <br>
         <br>
