--- a/blog.html
+++ b/blog.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css\appointment.css">
-    <title>Appointment Page</title>
+   <link rel="stylesheet" href="css\blog.css">
+    <title>Document</title>
 </head>
-
 <body>
         <div class="side-bar">
 
@@ -17,5 +15,4 @@
                 <a href="appointment.html"><span>Appointment</span></a>
             </div>
 </body>
-
 </html>
