first commit for appointment page

--- a/blog.html
+++ b/blog.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <link rel="stylesheet" href="css\blog.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="css\blog.css">
+    <title>Blog Page</title>
 </head>
 <body>
         <div class="side-bar">
@@ -14,5 +14,6 @@
                 <a href="blog.html"><span>Blog</span></a>
                 <a href="appointment.html"><span>Appointment</span></a>
             </div>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRcicXEMn51ikol1yvtNzGx-4ChbfDq7Hv4B47LP_8iT4QVhBQGxg" alt="">
 </body>
 </html>
