--- a/blog.html
+++ b/blog.html
@@ -4,16 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Merienda" rel="stylesheet">
     <link rel="stylesheet" href="css\blog.css">
     <title>Blog Page</title>
 </head>
 <body>
-        <div class="side-bar">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> 
+        <script>
+          $(document).ready(function(){  
+          $('.navigation').hide();  
+          $('.box').click(function(){  
+            $('.navigation').toggle();  
+          });  
+          });
+        </script>
+        <div class="mobilenav"> <span>
+          <div class="box">
+            <div class="lines"></div>
+          </div>
+          </span>
+          <ul class="navigation">
+            <li class="home current  first "> <a href="home.html" > <span>Home</span> </a> </li>
+            <li class="appointment"> <a href="appointment.html" > <span>Appointment</span> </a> </li>
+            <li class="blog"> <a href="blog.html" > <span>Blog</span> </a> </li>
+          </ul>
+        </div>
 
-                <a href="home.html"><span>Home</span></a>
-                <a href="blog.html"><span>Blog</span></a>
-                <a href="appointment.html"><span>Appointment</span></a>
-            </div>
+            <img src="https://thecellphonemedics.com/images/homepage/smart-phone-repair-cell-phone-medics.jpg" width="300px" height="200px" alt="">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRcicXEMn51ikol1yvtNzGx-4ChbfDq7Hv4B47LP_8iT4QVhBQGxg" alt="">
 </body>
 </html>
