--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Merienda" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+    integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" href="css\blog.css">
+
     <title>Blog Page</title>
 </head>
 <body>
@@ -30,7 +34,10 @@
           </ul>
         </div>
 
-            <img src="https://thecellphonemedics.com/images/homepage/smart-phone-repair-cell-phone-medics.jpg" width="300px" height="200px" alt="">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRcicXEMn51ikol1yvtNzGx-4ChbfDq7Hv4B47LP_8iT4QVhBQGxg" alt="">
+        <h1>Get phone repair right at your finger tips all you have to do is contact us <i class="fas fa-phone"><i class="fas fa-phone"><i class="fas fa-phone"></i></h1>
+        <p> 1.314.445.4903</h3></p>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRcicXEMn51ikol1yvtNzGx-4ChbfDq7Hv4B47LP_8iT4QVhBQGxg" width="100%" height="400px"alt="">
+        <script type="text/javascript" src="https://form.jotform.com/jsform/83597646428170"></script>
+            
 </body>
 </html>
